// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ShareModal should render correctly when open 1`] = `
<Fragment>
  <Button
    fullWidth={true}
    id="shareModalButton"
    onClick={[Function]}
    variant="secondary"
  >
    Share
  </Button>
  <Modal.LEGACY
    onClose={[Function]}
    open={true}
    showCloseButton={true}
  >
    <WindowEvent
      event="keydown"
      handler={[Function]}
    />
    <Panel.LEGACY
      title="Share this report"
    >
      <Panel.LEGACY.Section>
        <Stack>
          <CopyField
            hideCopy={false}
            value="http://phoenix.test/?range=custom&recipients=one%40test.com&recipients=two%2B2%40test.com"
          />
          <Checkbox
            checked={true}
            helpText="Pins this report's relative time range to its calculated dates (this is usually what you want when sharing a report)."
            id="pin-relative-link"
            label="Pin dates for this link"
            onChange={[Function]}
          />
        </Stack>
      </Panel.LEGACY.Section>
      <Panel.LEGACY.Section>
        <Button
          onClick={[Function]}
          variant="primary"
        >
          Done
        </Button>
      </Panel.LEGACY.Section>
    </Panel.LEGACY>
  </Modal.LEGACY>
</Fragment>
`;

exports[`Component: ShareModal should render with a valid relative range 1`] = `
<Fragment>
  <Button
    fullWidth={true}
    id="shareModalButton"
    onClick={[Function]}
    variant="secondary"
  >
    Share
  </Button>
  <Modal.LEGACY
    onClose={[Function]}
    open={false}
    showCloseButton={true}
  >
    <Panel.LEGACY
      title="Share this report"
    >
      <Panel.LEGACY.Section>
        <Stack>
          <CopyField
            hideCopy={false}
            value="http://phoenix.test/?range=custom&recipients=one%40test.com&recipients=two%2B2%40test.com"
          />
          <Checkbox
            checked={true}
            helpText="Pins this report's relative time range to its calculated dates (this is usually what you want when sharing a report)."
            id="pin-relative-link"
            label="Pin dates for this link"
            onChange={[Function]}
          />
        </Stack>
      </Panel.LEGACY.Section>
      <Panel.LEGACY.Section>
        <Button
          onClick={[Function]}
          variant="primary"
        >
          Done
        </Button>
      </Panel.LEGACY.Section>
    </Panel.LEGACY>
  </Modal.LEGACY>
</Fragment>
`;

exports[
  `Component: ShareModal should unpin when clicking the checkbox 1`
] = `"http://phoenix.test/?range=custom&recipients=one%40test.com&recipients=two%2B2%40test.com"`;

exports[
  `Component: ShareModal should unpin when clicking the checkbox 2`
] = `"http://phoenix.test/?range=valid&recipients=one%40test.com&recipients=two%2B2%40test.com"`;
